Refactor Data Handling and UI Updates for Artist Management
- Removed `.allowMainThreadQueries()` from `AppDatabase.java` to prevent UI thread blocking.
- Updated `ArtistDao` and `AvailableArtistDao` to return `LiveData<List<Artist>>` and `LiveData<List<AvailableArtist>>`.
- Refactored `ArtistRepository` and `AvailableArtistRepository` to utilize `LiveData`.
- Updated `MainActivity.java` to observe `LiveData` from `ArtistRepository`.
- Refactored `AddArtistActivity.java` to observe `LiveData` from `AvailableArtistRepository`.
- Modified `strings.xml` to include a format specifier in the `artist_added` string resource.
- Improved user experience with real-time search functionality.

These changes enhance the app's responsiveness and implement best practices for data handling and UI updates.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,6 @@
     <string name="search">Search</string>
     <string name="search_hint">Enter artist name</string>
     <string name="available_artists">Available Artists</string>
-    <string name="artist_added">Artist added to favorites</string>
+    <string name="artist_added">%s added to favorites</string>
     <string name="artist_removed">Artist removed from favorites</string>
 </resources>
