--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="available_artists">Available Artists</string>
     <string name="artist_added">%s added to favorites</string>
     <string name="artist_removed">Artist removed from favorites</string>
+    <string name="artist_already_exists">%1$s is already in your favorites</string>
 </resources>
