--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,8 @@
     <string name="artist_added">%s added to favorites</string>
     <string name="artist_removed">Artist removed from favorites</string>
     <string name="artist_already_exists">%1$s is already in your favorites</string>
+    <string name="song_liked">You liked this song</string>
+    <string name="song_unliked">You no longer like this song</string>
+
+
 </resources>
